test: user + config for gradle